# armgddn-downloader

./: .gitignore  .markdownlint.json  .todo.md  AUTO_UPDATE_SETUP.md  BUILD_INSTRUCTIONS.md  CHANGELOG.md  DEPLOYMENT.md  MANUAL_UNINSTALL.md  QUICK_START.md  RCLONE_SETUP.md  README.md  TEST_LOCALLY.md  index.html  main.js  package-lock.json  package.json  preload.js  register-protocol.reg  vite.config.ts
.github/workflows/: build.yml  sync-browser-version.yml
openspec/: AGENTS.md  project.md
openspec/changes/add-downloader-auto-update-startup/: proposal.md
openspec/changes/add-downloader-auto-update-startup/specs/update-system/: spec.md
openspec/changes/add-post-download-extraction/: tasks.md
openspec/changes/add-post-download-extraction/specs/desktop-ui/: spec.md
openspec/changes/archive/add-downloader-auto-update-startup/: tasks.md
openspec/changes/archive/add-downloader-auto-update-startup/specs/deployment/: spec.md
openspec/changes/archive/add-downloader-auto-update-startup/specs/desktop-ui/: spec.md
openspec/changes/archive/add-post-download-extraction/: proposal.md  tasks.md
openspec/changes/archive/add-post-download-extraction/specs/download-engine/: spec.md
openspec/changes/archive/improve-auto-update-ux/: proposal.md  tasks.md
openspec/changes/archive/improve-auto-update-ux/specs/update-system/: spec.md
openspec/specs/deep-link-and-manifest/: spec.md
openspec/specs/deployment/: spec.md
openspec/specs/desktop-ui/: spec.md
openspec/specs/download-engine/: spec.md
openspec/specs/session-and-auth/: spec.md
openspec/specs/update-system/: spec.md
renderer/: index.html  renderer.js  styles.css  update.html  update.js
src/: i18n.ts  main.ts  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: installer-hooks.nsh  installer.nsi
src-tauri/src/: download_manager.rs  lib.rs  rclone.rs  state.rs
src-tauri/wix/: protocol.wxs
