[package]
name = "armgddn-downloader"
version = "3.6.2"
description = "ARMGDDN Downloader - Fast rclone-powered download manager"
authors = ["Armgddn Games"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "armgddn-downloader"
path = "src/main.rs"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-updater = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-http = "2"
tray-icon = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
anyhow = "1.0"
dirs = "5.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
sys-info = "0.9"
base64 = "0.21"
sha2 = "0.10"
rand = "0.8"
aes-gcm = "0.10"

[target.'cfg(windows)'.dependencies]
winreg = "0.52.0"
